--- a/demo/index.html
+++ b/demo/index.html
@@ -57,6 +57,8 @@
   &#60;button type="submit">Do it!&#60;/button&#62;
 &#60;/form&#62;
 &#60;div class="result"&#62;&#60;/div&#62;
+
+&#60;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"&#62;&#60;/script&#62;
 </code></pre>
         </article>
 
