--- a/demo/index.html
+++ b/demo/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>MailChimp / Ajax / jQuery - Two Blokes</title>
+    <meta name="description" content="MailChimp signup form with Ajax / jQuery.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link rel="stylesheet" type="text/css" href="reset.css">
@@ -15,7 +15,6 @@
 
     <script src="modernizr-custom.min.js"></script>
 
-    
   </head>
 
   <body>
