--- a/demo/index.html
+++ b/demo/index.html
@@ -149,9 +149,9 @@
         <article class="notes">
           <h3>Notes:</h3>
           <p>The original php file by <a href="https://gist.github.com/mfkp" target="_blank">Kyle Powers</a> looks pretty rad, top guy for sharing. This version adds the ability to capture the First Name and Last Name too.</p>
-          <p>With the form, I have chosen to show an input label when a placeholder is not supported, this is only for the demo, not for the bare minimum.</p>
-          <p>I have chosen <strong>not</strong> to fully support the <code>required</code> attribute. Googling "form validation jquery" will throw up plenty of options for form validation.</p>
-          <p>The bare minimum is purposefully unstyled. If you would like to see the version I have done just check out the <a href="./demo-style.css"  target="_blank">demo-style.css</a>. I have marked where the form styles come in :)</p>
+          <p>With the form, we have chosen to show an input label when a placeholder is not supported, this is only for the demo, not for the bare minimum.</p>
+          <p>We have chosen <strong>not</strong> to fully support the <code>required</code> attribute. Googling "form validation jquery" will throw up plenty of options for form validation.</p>
+          <p>The bare minimum is purposefully unstyled. If you would like to see the version we have done just check out the <a href="./demo-style.css"  target="_blank">demo-style.css</a>. We have marked where the form styles come in :)</p>
         </article>
 
       </section>
